Remove binary icon assets

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: #0c0f14;
-    color: #e5e7eb;
+    background: #2d2d2d;
+    color: #e5e5e5;
 }
 
 a {
